posiGen_FullsendBox/src/objects/Business_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Business_Market__c</fullName>
        <label>Business Market</label>
        <referenceTo>Business_Market__c</referenceTo>
        <relationshipLabel>Business Stages</relationshipLabel>
        <relationshipName>Business_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_In_Tracker__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display In Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_sequence__c</fullName>
        <label>Execution sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_Json__c</fullName>
        <label>Formula Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Market__c</columns>
        <columns>Execution_sequence__c</columns>
        <columns>Display_In_Tracker__c</columns>
        <columns>Sequence__c</columns>
        <columns>Formula__c</columns>
        <columns>Formula_Json__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>